--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.12",
     "prisma": "^5.19.0",
     "tsx": "^4.19.0",
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@prisma/client": "^5.19.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "@prisma/client": "^5.19.0"
+    "js-base64": "^3.7.7",
+    "multer": "1.4.5-lts.1",
+    "reflect-metadata": "^0.2.2",
+    "tsyringe": "^4.8.0",
+    "zod": "^3.23.8"
   }
 }
