--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/multer": "^1.4.12",
-    "prisma": "^5.19.0",
+    "prisma": "^5.18.0",
     "tsx": "^4.19.0",
     "typescript": "^5.5.4"
   },
   "dependencies": {
-    "@prisma/client": "^5.19.0",
+    "@google/generative-ai": "^0.17.1",
+    "@prisma/client": "^5.18.0",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "js-base64": "^3.7.7",
