--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/shared/http/server.ts"
+    "dev": "tsx watch src/shared/http/server.ts",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +13,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/multer": "^1.4.12",
+    "jest": "^29.7.0",
     "prisma": "^5.18.0",
     "tsx": "^4.19.0",
     "typescript": "^5.5.4"
@@ -25,6 +27,7 @@
     "js-base64": "^3.7.7",
     "multer": "1.4.5-lts.1",
     "reflect-metadata": "^0.2.2",
+    "ts-jest": "^29.2.5",
     "tsyringe": "^4.8.0",
     "zod": "^3.23.8"
   }
